# NanoBroker

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  PERFORMANCE.md  build.sh  install_deps.sh  nanobroker_config.py  readme.md  requirements.txt  setup.py
examples/cpp_producer/: main.cpp
examples/python_consumer/: main.py
examples/starter_project/: CMakeLists.txt  main.cpp
include/nanobroker/: NanoBroker.hpp  video_protocol.hpp
src/: python_bindings.cpp
tools/: nanoadmin.cpp
